--- a/frontend/src/app/user/user.component.html
+++ b/frontend/src/app/user/user.component.html
@@ -8,8 +8,8 @@
                 <mat-divider></mat-divider>
                 <mat-card-content class="p-4 mt-3 mb-3">
                     <div *ngIf="profile" class="text-center">
-                        <img src="{{profile.imgUrl}}" class="img-fluid rounded-circle mx-auto d-block pr-5 pl-5" />
-                        <h4>{{profile.name}}</h4>
+                        <img src="{{profile.imgUrl}}" class="img-fluid rounded-circle mx-auto d-block pr-5 pl-5 ml-5 mr-5 mt-2" />
+                        <h4 class="mt-3">{{profile.name}}</h4>
                     </div>
                     <div *ngIf="!profile">
                         <mat-spinner class="text-center"></mat-spinner>
